--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,7 +6,6 @@
 @import 'neat/neat';
 @import 'font-awesome/css/font-awesome';
 @import 'typeplate-starter-kit/dist/css/typeplate';
-@import 'push-menu/dist/css/stylesheet';
 
 // Defaults, Components, then Pages
 @import 'defaults/breakpoints',
@@ -16,6 +15,7 @@
         'components/header',
         'components/footer',
         'components/navbar',
+        'components/navmenu',
         'components/logo',
         'pages/defaults'
 ;
