mobile navigation for the home page

--- a/src/_includes/navmenu.html
+++ b/src/_includes/navmenu.html
@@ -1,6 +1,6 @@
-<div class="navmenu">
+<div class="navmenu open">
 
-    <div class="navmenu__close">
+    <div class="navmenu__header">
         <a class="navmenu__close-btn"><i class="fa fa-remove"></i> Close</a>
     </div>
 
