--- a/src/sass/components/_navmenu.scss
+++ b/src/sass/components/_navmenu.scss
@@ -3,8 +3,9 @@ $navmenu-transition: all 0.3s;
 
 .navmenu {
     background: $clr-blue-dk;
-    bottom: 0;
+    //bottom: 0;
     box-shadow: 0 0 0.5em transparentize(#000, 0.5);
+    height: 100%;
     left: 100%;
     position: absolute;
     right: 0;
@@ -23,5 +24,19 @@ $navmenu-transition: all 0.3s;
     }
     @include media ($desktop) {
         left: 50%;
+    }
+}
+
+.navmenu__header {
+    border-bottom: 1px solid lighten($clr-blue-dk, 3%);
+    font-size: 24px;
+    padding: 0.5em 1.0em;
+    text-align: right;
+
+    a {
+        color: $clr-light;
+    }
+    a:hover {
+        color: #fff;
     }
 }
