--- a/src/_includes/navmenu.html
+++ b/src/_includes/navmenu.html
@@ -1,7 +1,8 @@
-<div class="navmenu open">
+<div class="navmenu">
 
     <div class="navmenu__header">
         <a class="navmenu__close-btn"><i class="fa fa-remove"></i> Close</a>
     </div>
 
+    {% include navigation.html %}
 </div>
