--- a/src/sass/components/_navmenu.scss
+++ b/src/sass/components/_navmenu.scss
@@ -2,15 +2,21 @@
 $navmenu-transition: all 0.3s;
 
 .navmenu {
-    background: $clr-blue-dk;
-    //bottom: 0;
-    box-shadow: 0 0 0.5em transparentize(#000, 0.5);
+    background: $clr-dark;
+    background-image: linear-gradient(to bottom, $clr-dark, darken($clr-dark, 7%));
+    color: darken($clr-light, 5%);
     height: 100%;
     left: 100%;
+    min-width: 350px;
     position: absolute;
     right: 0;
     top: 0;
     transition: $navmenu-transition;
+
+    .navigation {
+        background-color: transparent;
+        background-image: none;
+    }
 }
 
 .navmenu.open {
@@ -28,15 +34,21 @@ $navmenu-transition: all 0.3s;
 }
 
 .navmenu__header {
-    border-bottom: 1px solid lighten($clr-blue-dk, 3%);
-    font-size: 24px;
-    padding: 0.5em 1.0em;
-    text-align: right;
 
     a {
-        color: $clr-light;
+        color: darken($clr-light, 5%);
+        display: flex;
+        justify-content: flex-end;
+        padding: 1.0em;
+        text-align: right;
+        text-shadow: 1px 1px 0 #000;
+
+        i {
+            margin-right: 0.25em;
+        }
     }
     a:hover {
-        color: #fff;
+        background-color: transparentize($clr-light, 0.95);
+        color: $clr-light;
     }
 }
