--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -63,7 +63,7 @@
     @include footerSectionStyles();
 
     a {
-        color: #fff;
+        color: $clr-light;
         margin: 0 0.25em;
     }
 
