--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -10,6 +10,10 @@
     color: $clr-light;
     min-height: 400px;
     padding-top: 1.5em;
+
+    a {
+        text-decoration: none;
+    }
 }
 
 .footer__sections {
