--- a/src/sass/components/_navmenu.scss
+++ b/src/sass/components/_navmenu.scss
@@ -41,6 +41,7 @@ $navmenu-transition: all 0.3s;
         justify-content: flex-end;
         padding: 1.0em;
         text-align: right;
+        text-decoration: none;
         text-shadow: 1px 1px 0 #000;
 
         i {
