--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -1,7 +1,7 @@
 
 .navbar {
     align-items: center;
-    background: $clr-hlight_lt;
+    background: $clr-dark;
     //background-image: linear-gradient(to bottom, $clr-dark, #000);
     border-bottom: 1px solid $clr-light;
     box-shadow: 0 0 0.95em transparentize(#000, 0.35);
@@ -21,6 +21,7 @@
     color: darken($clr-light, 5%);
     display:flex;
     padding: 1.0em;
+    text-decoration: none;
     text-shadow: 1px 1px 0 #000;
 
     &:hover {
