--- a/src/sass/defaults/_tags.scss
+++ b/src/sass/defaults/_tags.scss
@@ -7,12 +7,13 @@ body {
 }
 
 a {
-    color: lighten($clr-hlight_lt, 10%);
+    //color: lighten($clr-hlight_lt, 10%);
+    color: $clr-hlight_lt;
     cursor: pointer;
     font-family: $font-heading;
-    text-decoration: none;
+    text-decoration: underline;
 
     &:hover {
-        color: lighten($clr-hlight_lt, 20%);
+        color: lighten($clr-hlight_lt, 10%);
     }
 }
