more nav updates

--- a/src/_includes/navmenu.html
+++ b/src/_includes/navmenu.html
@@ -1,7 +1,12 @@
-<div class="navmenu">
+<div class="navmenu open">
 
     <div class="navmenu__header">
+        <div class="navmenu__logo">
+            {% include logo-plain.html %}
+        </div>
+
         <a class="navmenu__close-btn"><i class="fa fa-remove"></i> Close</a>
+
     </div>
 
     {% include navigation.html %}
