--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -12,7 +12,7 @@ $header-transition: all 0.3s;
     align-items: stretch;
     background: $clr-dark;
     background-attachment: fixed;
-    background-image: url(../images/unsplash-code01.jpg);
+    background-image: url(../images/unsplash-code02-darken.jpg);
     background-position: center top;
     background-size: cover;
     border-bottom: 1px solid #fff;
