--- a/src/sass/components/_navmenu.scss
+++ b/src/sass/components/_navmenu.scss
@@ -2,9 +2,11 @@
 $navmenu-transition: all 0.3s;
 
 .navmenu {
-    background: $clr-dark;
-    background-image: linear-gradient(to bottom, $clr-dark, darken($clr-dark, 7%));
-    color: darken($clr-light, 5%);
+    background: $clr-light;
+    //background-image: linear-gradient(to bottom, $clr-dark, darken($clr-dark, 7%));
+    background-image: linear-gradient(to bottom, #e3e3e3 0%, #c1c2c4 50%);
+    box-shadow: 0 0 0.75em transparentize(#000, 0.5);
+    color: $clr-dark;
     height: 100%;
     left: 100%;
     min-width: 350px;
@@ -16,6 +18,26 @@ $navmenu-transition: all 0.3s;
     .navigation {
         background-color: transparent;
         background-image: none;
+
+        .navcols {
+
+            .navlink {
+                background: transparent;
+                border-left: 3px solid transparent;
+            }
+            .navlink:hover {
+                background: transparentize($clr-light, 0.90);
+                border-left: 3px solid $clr-hlight_lt;
+            }
+        }
+    }
+
+    a {
+        color: $clr-hlight_dk;
+
+        &:hover {
+            color: $clr-hlight_lt;
+        }
     }
 }
 
@@ -34,22 +56,27 @@ $navmenu-transition: all 0.3s;
 }
 
 .navmenu__header {
+    align-items: stretch;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    width: 100%;
+
+    .navmenu__logo {
+        flex-grow: 1;
+    }
 
     a {
-        color: darken($clr-light, 5%);
-        display: flex;
-        justify-content: flex-end;
+        color: $clr-dark;
         padding: 1.0em;
-        text-align: right;
         text-decoration: none;
-        text-shadow: 1px 1px 0 #000;
 
         i {
             margin-right: 0.25em;
         }
     }
     a:hover {
-        background-color: transparentize($clr-light, 0.95);
-        color: $clr-light;
+        background-color: transparentize($clr-light, 0.90);
+        color: lighten($clr-dark, 5%);
     }
 }
