--- a/src/_includes/navbar.html
+++ b/src/_includes/navbar.html
@@ -1,12 +1,8 @@
 
 <div class="navbar">
-    <div class="navbar__logo"><a href="/">{% include logo.html %}</a></div>
+    <div class="navbar__logo"><a href="/">{% include logo-plain.html %}</a></div>
 
     <a class="navbar__menu" id="ddv-menu-btn">
         <i class="icon fa fa-bars"></i> Menu
     </a>
-</div>
-
-<div class="navpanel">
-
 </div>
