tweaking navmenu colors

--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -115,7 +115,7 @@ $menulogo-lg: 60px;
     height: $menulogo-sm;
     margin: 0.25em 1.0em;
     width: $menulogo-sm * $ratio;
-    fill: $clr-hlight_lt;
+    fill: $clr-light;
 
     // dayton data visualization
     .text {
