--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -3,7 +3,7 @@
     align-items: center;
     //background: $clr-dark;
     //background-image: linear-gradient(to bottom, $clr-dark, #000);
-    background: darken($clr-hlight2_lt, 35%);
+    background: $clr-dark-alt;
     border-bottom: 1px solid $clr-light;
     //box-shadow: 0 0 0.95em transparentize(#000, 0.35);
     display: flex;
