updates for the home page content styles

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -46,6 +46,7 @@
 
     ul {
         border-left: 3px dotted lighten($clr-dark, 5%);
+        list-style: none;
         margin-left: 1.0em;
         padding-left: 0.5em;
     }
