--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,5 +17,6 @@
         'components/navbar',
         'components/navmenu',
         'components/logo',
-        'pages/defaults'
+        'pages/defaults',
+        'pages/home'
 ;
