--- a/src/sass/defaults/_tags.scss
+++ b/src/sass/defaults/_tags.scss
@@ -4,6 +4,8 @@ body, html {
 
 body {
     background: $clr-light url(../images/handmadepaper2.png) top left repeat;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 a {
@@ -15,5 +17,23 @@ a {
 
     &:hover {
         color: lighten($clr-hlight_lt, 10%);
+    }
+}
+
+p {
+    margin: 1.0em 0;
+}
+
+strong {
+    font-weight: bold;
+}
+
+ul {
+    list-style: disc;
+    margin-left: 1.0em;
+    padding-left: 1.0em;
+
+    li {
+        margin-bottom: 0.5em;
     }
 }
