--- a/src/sass/defaults/_tags.scss
+++ b/src/sass/defaults/_tags.scss
@@ -20,6 +20,14 @@ a {
     }
 }
 
+hr {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid $clr-hlight2_dk;
+    height: 0px;
+    margin: 1.0em 0;
+}
+
 p {
     margin: 1.0em 0;
 }
