--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,6 +12,7 @@
         'defaults/colors',
         'defaults/typography',
         'defaults/tags',
+        'components/button',
         'components/header',
         'components/footer',
         'components/navbar',
