--- a/src/_layouts/event.html
+++ b/src/_layouts/event.html
@@ -13,7 +13,7 @@ layout: default
         {{ content }}
     </div>
 
-    <div class="event-rsvp">
+    <div class="event__rsvp">
         <a class="button" href="{{ event.rsvp }}">
             <img src="/images/meetup-logo.svg" /> RSVP
         </a>
