--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -50,7 +50,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/events">Events</a></li>
-                <li><a href="/blog">Blog</a></li>
+                <li><a href="/news">News</a></li>
                 <li><a href="/jobs">Jobs</a></li>
                 <li><a href="/speakers">Speakers</a></li>
                 <li><a href="/tutorials">Tutorials</a></li>
