--- a/src/_includes/navigation.html
+++ b/src/_includes/navigation.html
@@ -5,7 +5,7 @@
             <div class="navcol">
                 <div><a class="navlink" href="/">Home</a></div>
                 <div><a class="navlink" href="/events">Events</a></div>
-                <div><a class="navlink" href="/blog">Blog</a></div>
+                <div><a class="navlink" href="/news">News</a></div>
                 <div><a class="navlink" href="/jobs">Jobs</a></div>
                 <div><a class="navlink" href="/speakers">Speakers</a></div>
             </div>
