web mapping workshop

--- a/src/_layouts/event.html
+++ b/src/_layouts/event.html
@@ -14,7 +14,7 @@ layout: default
     </div>
 
     <div class="event__rsvp">
-        <a class="button" href="{{ event.rsvp }}">
+        <a class="button" href="{{ page.rsvp }}">
             <img src="/images/meetup-logo.svg" /> RSVP
         </a>
     </div>
