--- a/src/sass/defaults/_typography.scss
+++ b/src/sass/defaults/_typography.scss
@@ -28,9 +28,18 @@ h4, h5, h6 {
 
 p {
     line-height: 1.33em;
+    margin: 2.5em 0;
+}
+
+p:not(:first-child) {
+    margin-top: 0;
 }
 
 p+p {
     text-indent: 0;
     margin-top: -0.75rem;
+}
+
+ul {
+    margin-bottom: 1.5em;
 }
