--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -8,6 +8,7 @@
     background-size: contain;
     border-top: 2.0em solid lighten($clr-dark, 35%);
     color: $clr-light;
+    margin-top: 2.0em;
     min-height: 400px;
     padding-top: 1.5em;
 
