--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -20,5 +20,6 @@
         'components/navmenu',
         'components/logo',
         'pages/defaults',
-        'pages/home'
+        'pages/home',
+        'pages/sponsors'
 ;
