--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -39,7 +39,7 @@
                 We could really use your help generating site content and
                 bug fixing. See a current list of items we need help
                 with on our
-                <a href="https://github.com/daytondv/www.daytondv.com/issues">github issues page</a>.
+                <a href="https://github.com/daytondv/www.daytondv.org/issues">github issues page</a>.
                 Join the #daytondv channel on the
                 <a href="http://www.opendayton.org">OpenDayton Slack Community</a>
                 and we'll help you get started!
