--- a/src/sass/defaults/_typography.scss
+++ b/src/sass/defaults/_typography.scss
@@ -14,13 +14,43 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 3.0em;
+    font-size: 2.0em;
+
+    @include media($tablet-portrait) {
+        font-size: 2.5em;
+    }
+    @include media ($tablet-landscape) {
+        font-size: 3.0em;
+    }
+    @include media ($desktop) {
+        font-size: 3.0em;
+    }
 }
 h2 {
-    font-size: 2.0em;
+    font-size: 1.25em;
+
+    @include media($tablet-portrait) {
+        font-size: 1.25em;
+    }
+    @include media ($tablet-landscape) {
+        font-size: 2.0em;
+    }
+    @include media ($desktop) {
+        font-size: 2.0em;
+    }
 }
 h3 {
-    font-size: 1.5em;
+    font-size: 1.10em;
+
+    @include media($tablet-portrait) {
+        font-size: 1.10em;
+    }
+    @include media ($tablet-landscape) {
+        font-size: 1.5em;
+    }
+    @include media ($desktop) {
+        font-size: 1.5em;
+    }
 }
 h4, h5, h6 {
     font-size: 1.0em;
