Adding a link to the meetup page to the header

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -5,6 +5,12 @@
         <div class="headerlogo">
             <a href="/">{% include logo.html %}</a>
         </div>
+        <div class="meetup-btn">
+            <a class="button-primary" href="http://meetup.com/daytondv">
+                <img src="/images/meetup-logo.svg" />
+                Join us!
+            </a>
+        </div>
     </div>
 
     {% include navigation.html %}
