chore: Add blank alt attributes for elements where assistive text already exists

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -7,7 +7,7 @@
         </div>
         <div class="meetup-btn">
             <a class="button-primary" href="http://meetup.com/daytondv">
-                <img src="/images/meetup-logo.svg" />
+                <img src="/images/meetup-logo.svg" alt="" />
                 Join us!
             </a>
         </div>
