--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -9,9 +9,9 @@
             </div>
 
             <div class="footer__links">
-                <a href="http://meetup.com/daytondv"><img src="/images/meetup-logo.svg" /></a>
-                <a href="https://github.com/daytondv" alt="GitHub"><i class="fa fa-github"></i></a>
-                <a href="https://twitter.com/daytondv" alt="Twitter"><i class="fa fa-twitter"></i></a>
+                <a href="http://meetup.com/daytondv"><img src="/images/meetup-logo.svg" alt="Meetup logo" /></a>
+                <a href="https://github.com/daytondv" title="GitHub"><i class="fa fa-github"></i></a>
+                <a href="https://twitter.com/daytondv" title="Twitter"><i class="fa fa-twitter"></i></a>
                 <a href="http://workatais.com"><img src="/images/sponsors/ais-white.png" alt="Applied Information Sciences" /></a>
 
             </div>
